lab_2 functional & lab_4 added

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,2 +1,8 @@
 compile: ./java_labs/Main.java
 	javac -d "./../build/" ./java_labs/Main.java
+
+clean:
+	find . -name "*.class" -exec rm -f {} \;
+
+clean(win):
+	del /s *.class
